--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^17.0.0",
     "clsx": "^1.1.1",
     "graphql": "^15.5.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -58,6 +59,7 @@
     "@graphql-codegen/cli": "^1.21.4",
     "@graphql-codegen/typescript-operations": "^1.17.16",
     "@graphql-codegen/typescript-react-apollo": "^2.2.4",
+    "@types/lodash": "^4.14.170",
     "@types/react-router": "^5.1.14",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-window": "^1.8.3",
