--- a/ui/codegen.yml
+++ b/ui/codegen.yml
@@ -1,5 +1,6 @@
 schema:
-  - http://localhost:9999/graphql
+  - http://localhost:9998/graphql # Coordinator API
+  - http://localhost:9999/graphql # GameServer API
 documents:
   - ./src/**/*.graphql
 overwrite: true
