--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -1,8 +1,15 @@
 {
-  "name": "Coordinator",
+  "name": "Sudoku",
   "schemaPath": "schema.graphql",
   "extensions": {
     "endpoints": {
+      "GameServer": {
+        "url": "http://localhost:9999/graphql",
+        "headers": {
+          "user-agent": "JS GraphQL"
+        },
+        "introspect": false
+      },
       "Coordinator": {
         "url": "http://localhost:9998/graphql",
         "headers": {
